cmake_minimum_required(VERSION 2.6)
 
PROJECT(RenderWindow)
 
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
MESSAGE(STATUS "VTK_USE_FILE = " ${VTK_USE_FILE} )
 
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
 MESSAGE(STATUS "QT_USE_FILE = " ${QT_USE_FILE} )
 
ADD_EXECUTABLE(RenderWindow RenderWindow.cpp)
TARGET_LINK_LIBRARIES(RenderWindow QVTK vtkHybrid)
